@@ -562,6 +562,8 @@ PHP 8.4 UPGRADE NOTES
   . Added pg_socket_poll to check if there is any read and/or write events
     with an optional timeout.
   . Added pg_jit to get informations on the server JIT support.
+  . Added pg_set_chunked_rows_size to allow to fetch results in chunk of
+    max N rows.
 
 - Sodium:
   . Added the sodium_crypto_aead_aegis128l_*() and sodium_crypto_aead_aegis256l_*()
